# email-validator

./: .gitignore  .replit  API.md  API_EXAMPLES.md  GITHUB_SETUP.md  README.md  jest.config.ts  package-lock.json  package.json  pyproject.toml  replit.nix  tsconfig.json
.github/workflows/: main.yml
client/src/components/: bulk-email-validator.tsx  custom-email-tester.tsx  email-validator.tsx  rate-limit-wizard.tsx  validation-metrics.tsx
client/src/components/dashboard/: performance-charts.tsx
client/src/lib/: validation.ts
client/src/pages/: home.tsx
db/: schema.ts
examples/: validate_email.py  validate_email.sh
server/: app.py  email-validation-utils.js  email-validation-utils.ts  email-validation.worker.js  email-validation.worker.ts  email-verifier.ts  email_validator.py  index.ts  metrics.ts  rate-limit-config.ts  routes.ts  run.py  smtp-verifier.ts  start_servers.py  worker-pool.ts
server/static/: email-validator.css
server/templates/: base.html  email_validator.html
server/tests/: email-validator.test.ts
tests/: email-validator.test.ts  setup.ts
