[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "bcrypt>=4.2.1",
    "dnspython>=2.7.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.6",
    "flask>=3.1.0",
    "jinja2>=3.1.5",
    "passlib>=1.7.4",
    "pydantic>=2.10.5",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
